fix overflow of result div

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -82,7 +82,9 @@ $header1-color: lighten($x-color, 15%);
 }
 
 .result {
-  height: 25px;
+  height: 50px;
+  display: block;
+  overflow: hidden;
 }
 
 .result h1 {
